# PureTalk

PureTalk-backend-ai/: .env  langgraph.json  pyproject.toml
PureTalk-backend-ai/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
PureTalk-backend-ai/src/puretalk_ai/: main.py
PureTalk-backend-ai/src/puretalk_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PureTalk-backend-ai/src/puretalk_ai/agents/: admin_agent.py  root_agent.py  user_agent.py
PureTalk-backend-ai/src/puretalk_ai/config/: settings.py
PureTalk-backend-ai/src/puretalk_ai/core/: contextvars.py  tools_bean.py
PureTalk-backend-ai/src/puretalk_ai/llm/: deepseek.py
PureTalk-backend-ai/src/puretalk_ai/middlewares/: admin_system_prompt_middleware.py  root_system_prompt_middleware.py  user_system_prompt_middleware.py
PureTalk-backend-ai/src/puretalk_ai/routers/: ai_message_router.py
PureTalk-backend-ai/src/puretalk_ai/schemas/: do_chat.py
PureTalk-backend-ai/src/puretalk_ai/tools/: contextvars.py  execute_sql_tool.py  get_feedbacks_tool.py  get_notification_target_tool.py  get_notifications_tool.py  get_post_comments_tool.py  get_posts_tool.py  get_report_target_tool.py  get_reports_tool.py  get_user_posts_tool.py  search_posts_tool.py
PureTalk-backend-server/: pom.xml
PureTalk-frontend/: index.html  tsconfig.tsbuildinfo
PureTalk-frontend/src/: App.vue  main.ts
PureTalk-frontend/src/api/: ai.ts  comment.ts  post.ts  report.ts  user.ts
(+58 files in other folders)
